# hurricane-money

./: .gitignore  Cargo.toml  README.md  TODO.md  hm.app.proof  inputs.json
contracts/: foundry.toml
contracts/scripts/: Deploy.s.sol
contracts/src/: Hurricane.sol
guest/: Cargo.toml  openvm.toml
guest/src/: main.rs
host/: Cargo.toml
host/src/: contract.rs  deposit.rs  main.rs  old_main.rs  withdraw.rs
program/: Cargo.toml
program/src/: main.rs
prover/: Cargo.toml
prover/src/: main.rs
src/: main.rs
