[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0" }
rs_merkle = "1.5.0"
hex = { version = "0.4.3" }
alloy = "2.0.0"
rand = "0.10.1"
