[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.5.0" }
rs_merkle = { version = "1.5.0", features = ["keccak256"] }
hex = { version = "0.4.3", features = ["serde"] }
getrandom = "0.4.2"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
alloy = { version = "2.0.0", features = ["node-bindings", "provider-anvil-api"] }
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
